Bug 125518 - docx export: chart anchor and wrapping are not exported
Summary: docx export: chart anchor and wrapping are not exported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-05-27 07:08 UTC by Vasily Melenchuk (CIB)
Modified: 2021-05-22 08:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
ODT with 3 diagrams (33.63 KB, application/vnd.oasis.opendocument.text)
2019-05-27 07:09 UTC, Vasily Melenchuk (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2019-05-27 07:08:57 UTC
Description:
Given document contains 3 diagrams with different wrapping and anchor options.


Steps to Reproduce:
1. Open attached file
2. Save it as DOCX
3. Open resulting file and compare to original

Actual Results:
All diagrams are inline element without any wrapping/anchors

Expected Results:
Diagrams in resulting DOCX receive same wrapping and anchors properties as in source ODT


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Vasily Melenchuk (CIB) 2019-05-27 07:09:34 UTC
Created attachment 151696 [details]
ODT with 3 diagrams
Comment 2 Julien Nabet 2019-05-27 08:34:41 UTC
Let's put ASSIGNED since you assigned yourself.
Comment 3 Commit Notification 2019-06-26 09:42:00 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ece4a0f78bb60ef079722e8fa029f0ec253d0452%5E%21

tdf#125518: docx export: save anchors for diagrams

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-06-28 11:35:51 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/609f82ef8a2019473c801fd6f537195b472165bc%5E%21

tdf#125518: docx export: save anchors for diagrams

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.