tdf#125518: docx export: save anchors for diagrams

Previously all diagrams were saved as inline objects ignoring
possible wrapping options and anchors.

Change-Id: I0952fb33d4be4c288c919156af9549f8195b7ead